ansible/playbook-vagrant.yml: run playbook-elasticsearch_installation.yml

--- a/ansible/playbook-vagrant.yml
+++ b/ansible/playbook-vagrant.yml
@@ -17,3 +17,6 @@
 
 - name: 'Run playbook-eck_operator_installation.yml'
   ansible.builtin.import_playbook: playbook-eck_operator_installation.yml
+
+- name: 'Run playbook-elasticsearch_installation.yml'
+  ansible.builtin.import_playbook: playbook-elasticsearch_installation.yml
