ansible/playbook-vagrant.yml: run playbook-fluentd_installation.yml

--- a/ansible/playbook-vagrant.yml
+++ b/ansible/playbook-vagrant.yml
@@ -20,3 +20,6 @@
 
 - name: 'Run playbook-elasticsearch_installation.yml'
   ansible.builtin.import_playbook: playbook-elasticsearch_installation.yml
+
+- name: 'Run playbook-fluentd_installation.yml'
+  ansible.builtin.import_playbook: playbook-fluentd_installation.yml
